--- a/views/partials/profile-modal.ejs
+++ b/views/partials/profile-modal.ejs
@@ -13,25 +13,25 @@
 <!--      </div>-->
 <!--    </div>-->
 
-    <div class="profile-info">
-      <div class="detail-row">
-        <span class="label">골드머니</span>
-        <span class="value"><%= user.balance.toLocaleString() %> 골드</span>
-      </div>
-      <div class="detail-row">
-        <span class="label">실버머니</span>
-        <span class="value"><%= user.silver.toLocaleString() %> 백실버</span>
-      </div>
-      <div class="detail-row">
-        <span class="label">보유 캐시</span>
-        <span class="value">0 캐시</span>
-      </div>
-      <div class="detail-row">
-        <span class="label">멤버십</span>
-        <span class="value">일반</span>
-      </div>
+<!--    <div class="profile-info">-->
+<!--      <div class="detail-row">-->
+<!--        <span class="label">골드머니</span>-->
+<!--        <span class="value"><%= user.balance.toLocaleString() %> 골드</span>-->
+<!--      </div>-->
+<!--      <div class="detail-row">-->
+<!--        <span class="label">실버머니</span>-->
+<!--        <span class="value"><%= user.silver.toLocaleString() %> 백실버</span>-->
+<!--      </div>-->
+<!--      <div class="detail-row">-->
+<!--        <span class="label">보유 캐시</span>-->
+<!--        <span class="value">0 캐시</span>-->
+<!--      </div>-->
+<!--      <div class="detail-row">-->
+<!--        <span class="label">멤버십</span>-->
+<!--        <span class="value">일반</span>-->
+<!--      </div>-->
 
-      <button class="charge-button font-kr-medium">마이페이지</button>
-    </div>
+<!--      <button class="charge-button font-kr-medium">마이페이지</button>-->
+<!--    </div>-->
   </div>
 </div>
