refactor app.js

--- a/views/partials/mypage/stats-section.ejs
+++ b/views/partials/mypage/stats-section.ejs
@@ -24,7 +24,7 @@
           보유 캐시
         </span>
         <div class="stats-value">
-          <span class="number">0</span>
+          <span class="number"><%= user.cash.toLocaleString() %></span>
           <span class="unit">캐시</span>
           <button class="detail-button">충전</button>
         </div>
